cleaned up code - deleted unessecary comments/variables and fixed css alignment

--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ svg {
     padding: 20px;
 }
 
-/* #chart {
-    display: flex;
-    align-items: center;
-    justify-items: flex-start;
-} */
+#chart {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
 
 .bar {
     fill: grey;
